# openmetadata-rs-sdk

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md
src/: auth.rs  client.rs  connection.rs  crud.rs  entities.rs  errors.rs  lib.rs
