[package]
name = "openmetadata-rs-sdk"
description = "OpenMetadata client SDK. Open Standard for Metadata. A Single place to Discover, Collaborate and Get your data right"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/arustydev/openmetadata-rs-sdk"
keywords = [
    "sdk",
    "open-metadata",
    "data-lineage",
    "data-quality",
    "data-governance",
]
categories = ["api-bindings", "authentication", "database"]
# documentation = "https://docs.rs/bitflags" # The documentation field specifies a URL to a website hosting the crate’s documentation. If no URL is specified in the manifest file, crates.io will automatically link your crate to the corresponding docs.rs page when the documentation has been built and is available (see docs.rs queue).

[dependencies]
futures = "0.3.31"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }

# [badges]
# # The `maintenance` table indicates the status of the maintenance of
# # the crate. This may be used by a registry, but is currently not
# # used by crates.io. See https://github.com/rust-lang/crates.io/issues/2437
# # and https://github.com/rust-lang/crates.io/issues/2438 for more details.
# #
# # The `status` field is required. Available options are:
# # - `actively-developed`: New features are being added and bugs are being fixed.
# # - `passively-maintained`: There are no plans for new features, but the maintainer intends to
# #   respond to issues that get filed.
# # - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
# #   it or providing support, but it works for the purposes it was designed for.
# # - `experimental`: The author wants to share it with the community but is not intending to meet
# #   anyone's particular use case.
# # - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
# #   else.
# # - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
# #   can describe why, there could be a better solution available or there could be problems with
# #   the crate that the author does not want to fix).
# # - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
# #   their intentions, potential crate users will need to investigate on their own.
# maintenance = { status = "..." }
